tests/e2e/snapshots/e2e__cli_dns__dns_zone_list_table.snap
---
source: tests/e2e/cli_dns.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
+-------+---------------+---------+-------------+--------+----------------------+
| ID    | Domain        | Records | NS Detected | DNSSEC | Created              |
+-------+---------------+---------+-------------+--------+----------------------+
| 50001 | example.com   | 1       | true        | false  | 2024-01-01T00:00:00Z |
+-------+---------------+---------+-------------+--------+----------------------+
| 50002 | test-site.org | 0       | false       | false  | 2024-02-01T00:00:00Z |
+-------+---------------+---------+-------------+--------+----------------------+
